iOS issue fix
*fixed issue with “me” picture not showing on iPhone

--- a/css/styles.css
+++ b/css/styles.css
@@ -91,7 +91,6 @@ a {
 
 section img[src*="me"] {
   width: 50%;
-  height: 50%;
 }
 
 
@@ -367,10 +366,6 @@ Media query
       padding: .6em;
     }
 
-    section img[src*="me"] {
-      width: 40%;
-      height: 40%;
-    }
 
 
   }
